{
    "name": "GameActions",
    "maps": [
        {
            "name": "Game",
            "id": "e2ab8f12-2d45-473d-b1a0-ea169645ca4e",
            "actions": [
                {
                    "name": "OnLeftClick",
                    "type": "Button",
                    "id": "b29d53c1-d1f8-43ce-99df-554a3b97a51e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRightClick",
                    "type": "Button",
                    "id": "e1d8440c-d68e-4c5a-9be9-1f9cc8e06478",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnDelta",
                    "type": "Value",
                    "id": "798a346d-63ca-4a5b-936e-c9c376807a81",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnPosition",
                    "type": "Value",
                    "id": "709b88ec-137d-478f-86cf-11ecbafcb56d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnScroll",
                    "type": "Value",
                    "id": "c461266e-5859-4d1e-abe2-52f0d7789376",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ff920dc4-3f9e-470f-b4d7-61310cf2c7ac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67c94172-6691-4247-8d75-842edcc2b7b7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44dfb681-a3a4-4090-b227-741423a23aec",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4d68db7-7a60-4730-9085-899e53ea5369",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28691ae9-83ee-4a98-9fb2-7f82282bd34e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}